screenshot and slight adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ mtg_crucible/build.gradle
 /mtg_crucible/gradlew
 /mtg_crucible/gradlew.bat
 /mtg_crucible/settings.gradle
+/mtg_crucible/app/release/
